--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ kombu==5.2.4
 lxml==4.9.2
 MarkupSafe==2.1.2
 multitasking==0.0.11
+mysqlclient==2.2.0
 numpy==1.24.3
 pandas==2.0.1
 platformdirs==3.5.1
