--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appdirs==1.4.4
 asgiref==3.6.0
 beautifulsoup4==4.12.2
 billiard==3.6.4.0
+black==23.3.0
 celery==5.2.7
 certifi==2023.5.7
 cffi==1.15.1
@@ -27,9 +28,12 @@ kombu==5.2.4
 lxml==4.9.2
 MarkupSafe==2.1.2
 multitasking==0.0.11
+mypy-extensions==1.0.0
 mysqlclient==2.2.0
 numpy==1.24.3
+packaging==23.1
 pandas==2.0.1
+pathspec==0.11.1
 platformdirs==3.5.1
 prompt-toolkit==3.0.38
 pycparser==2.21
